# ts100

./: .gitignore  .gitmodules  README.md
Firmware/: .gitignore  CMakeLists.txt  ts100.ioc
Firmware/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Firmware/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Firmware/cmake/: toolchain-arm-none-eabi.cmake
Firmware/include/: FastPID.h
Firmware/source/: FastPID.c
Hardware/: fp-lib-table  sym-lib-table  ts100-cache.lib  ts100.dcm  ts100.kicad_pcb  ts100.kicad_prl  ts100.kicad_pro  ts100.kicad_sch  ts100.kicad_sym  ts100.lib  ts100.pro  ts100.sch
Hardware/ts100.pretty/: 3362P.kicad_mod  Fuseholder5x20_horiz_open_inline_Type-I.kicad_mod  Fuseholder5x20_horiz_open_lateral_Type-II.kicad_mod  Fuseholder_5x20mm_inline.kicad_mod  Inductor_SMD_5x4.5mm.kicad_mod  SMD,4.6x1.82x3.5mm.kicad_mod
